@@ -31,7 +31,7 @@ import static org.hisp.dhis.tracker.imports.validation.validator.AssertValidatio
 import static org.hisp.dhis.utils.Assertions.assertIsEmpty;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
 import org.hisp.dhis.common.CodeGenerator;
@@ -718,7 +718,6 @@ class DataValuesValidatorTest
     @Test
     void successValidationDataElementOptionValueIsValid()
     {
-
         DataValue validDataValue = dataValue( "CODE" );
         DataValue nullDataValue = dataValue( null );
 
@@ -727,7 +726,7 @@ class DataValuesValidatorTest
         option.setCode( "CODE" );
         Option option1 = new Option();
         option1.setCode( "CODE1" );
-        optionSet.setOptions( Arrays.asList( option, option1 ) );
+        optionSet.setOptions( List.of( option, option1 ) );
 
         DataElement dataElement = dataElement();
         dataElement.setOptionSet( optionSet );
@@ -751,7 +750,6 @@ class DataValuesValidatorTest
     @Test
     void failValidationDataElementOptionValueIsInValid()
     {
-
         DataValue validDataValue = dataValue( "value" );
         validDataValue.setDataElement( MetadataIdentifier.ofUid( dataElementUid ) );
 
@@ -760,7 +758,7 @@ class DataValuesValidatorTest
         option.setCode( "CODE" );
         Option option1 = new Option();
         option1.setCode( "CODE1" );
-        optionSet.setOptions( Arrays.asList( option, option1 ) );
+        optionSet.setOptions( List.of( option, option1 ) );
 
         DataElement dataElement = dataElement();
         dataElement.setOptionSet( optionSet );
@@ -783,9 +781,73 @@ class DataValuesValidatorTest
     }
 
     @Test
+    void successValidationDataElementMultiTextOptionValueIsValid()
+    {
+        DataValue validDataValue = dataValue( "CODE,CODE1" );
+        DataValue nullDataValue = dataValue( null );
+
+        OptionSet optionSet = new OptionSet();
+        Option option = new Option();
+        option.setCode( "CODE" );
+        Option option1 = new Option();
+        option1.setCode( "CODE1" );
+        optionSet.setOptions( List.of( option, option1 ) );
+
+        DataElement dataElement = dataElement( ValueType.MULTI_TEXT );
+        dataElement.setOptionSet( optionSet );
+        when( preheat.getDataElement( MetadataIdentifier.ofUid( dataElementUid ) ) ).thenReturn( dataElement );
+
+        ProgramStage programStage = programStage( dataElement );
+        when( preheat.getProgramStage( MetadataIdentifier.ofUid( programStageUid ) ) )
+            .thenReturn( programStage );
+
+        Event event = Event.builder()
+            .programStage( idSchemes.toMetadataIdentifier( programStage ) )
+            .status( EventStatus.SKIPPED )
+            .dataValues( Set.of( validDataValue, nullDataValue ) )
+            .build();
+
+        validator.validate( reporter, bundle, event );
+
+        assertIsEmpty( reporter.getErrors() );
+    }
+
+    @Test
+    void failValidationDataElementMultiTextOptionValueIsInValid()
+    {
+        DataValue validDataValue = dataValue( "CODE1,CODE2" );
+        validDataValue.setDataElement( MetadataIdentifier.ofUid( dataElementUid ) );
+
+        OptionSet optionSet = new OptionSet();
+        Option option = new Option();
+        option.setCode( "CODE" );
+        Option option1 = new Option();
+        option1.setCode( "CODE1" );
+        optionSet.setOptions( List.of( option, option1 ) );
+
+        DataElement dataElement = dataElement( ValueType.MULTI_TEXT );
+        dataElement.setOptionSet( optionSet );
+        when( preheat.getDataElement( MetadataIdentifier.ofUid( dataElementUid ) ) ).thenReturn( dataElement );
+
+        ProgramStage programStage = programStage( dataElement );
+        when( preheat.getProgramStage( MetadataIdentifier.ofUid( programStageUid ) ) )
+            .thenReturn( programStage );
+
+        Event event = Event.builder()
+            .event( CodeGenerator.generateUid() )
+            .programStage( idSchemes.toMetadataIdentifier( programStage ) )
+            .status( EventStatus.SKIPPED )
+            .dataValues( Set.of( validDataValue ) )
+            .build();
+
+        validator.validate( reporter, bundle, event );
+
+        assertHasError( reporter, event, ValidationCode.E1125 );
+    }
+
+    @Test
     void failValidationWhenOrgUnitValueIsInvalid()
     {
-
         DataElement validDataElement = dataElement( ValueType.ORGANISATION_UNIT );
         when( preheat.getDataElement( MetadataIdentifier.ofUid( dataElementUid ) ) ).thenReturn( validDataElement );
 
@@ -811,7 +873,6 @@ class DataValuesValidatorTest
     @Test
     void succeedsValidationWhenOrgUnitValueIsValid()
     {
-
         DataElement validDataElement = dataElement( ValueType.ORGANISATION_UNIT );
         when( preheat.getDataElement( MetadataIdentifier.ofUid( dataElementUid ) ) ).thenReturn( validDataElement );
 
